k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: muk-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: muk-app
  template:
    metadata:
      labels:
        app: muk-app
    spec:
      containers:
        - name: muk-app
          image: hmlinux11/muk-cloud-app:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
