k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: muk-app-service
spec:
  type: NodePort
  selector:
    app: muk-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30050
