k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: muk-ingress
spec:
  rules:
    - host: muk.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: muk-app-service
                port:
                  number: 5000
